# pilot

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  release.sh
examples/: chat.yaml  code-review.yaml  each.yaml  hello-agent.md  parallel.yaml  second-opinion.yaml  select-all.yaml  select.yaml  shell-template.yaml  trigger-jq.yaml  trigger.yaml
src/: agent.rs  args.rs  chunker.rs  cli_io.rs  config.rs  discovery.rs  events.rs  explain.rs  explain_prompt.md.j2  help.rs  legacy.rs  lib.rs  main.rs  models.rs  runner.rs  screen_capture.rs  tool_cli.rs  update.rs  update_prompt.md.j2  user_io.rs  workflow_tests.rs
src/dag_v2/: buffer_transport.rs  chunk.rs  error.rs  mod.rs  produces.rs  schema.rs  transport.rs
src/llm/: anthropic.rs  duration.rs  gemini.rs  mod.rs  openai.rs  testing.rs  xai.rs
src/producers_v2/: mod.rs  pipeline.rs
src/producers_v2/builder/: mod.rs  tests.rs
src/producers_v2/compact/: mod.rs  tests.rs
src/producers_v2/const_producer/: mod.rs  tests.rs
src/producers_v2/each/: mod.rs  tests.rs
src/producers_v2/http/: mod.rs  tests.rs
src/producers_v2/llm_call/: mod.rs  tests.rs
src/producers_v2/loop_/: mod.rs  tests.rs
src/producers_v2/mutable_producer/: mod.rs  tests.rs
src/producers_v2/parallel/: mod.rs  tests.rs
src/sql/: cli.rs  datafusion.rs  mod.rs
src/tools/: abort.rs  approve.rs  ask_user.rs  dispatcher.rs  file.rs  http.rs  input.rs  migrate.rs  mod.rs  s3.rs  shell.rs  submit_fields.rs  validate_yaml.rs  write_workflow.rs
src/workflow/: mod.rs  schema.rs  types.rs  validation.rs
(+21 files in other folders)
