[package]
name = "pilot"
version = "0.21.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[[bin]]
name = "pilot"
path = "src/main.rs"

[dependencies]
arrow = { version = "57", features = ["ipc"] }
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive", "env"] }
colored = "3.1.1"
datafusion = { version = "52.4.0", features = ["default"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
enigo = "0.6.1"
futures = "0.3.32"
glob = "0.3.3"
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
minijinja = "2.18.0"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
shlex = "1.3.0"
sqlparser = "0.61.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["webp"] }
xcap = "0.9.3"
tokio-stream = "0.1.18"
rust-s3 = { version = "0.37.1", default-features = false, features = ["tokio-rustls-tls"] }
libsql = { version = "0.9.30", default-features = false, features = ["core"] }

[dev-dependencies]
wiremock = "0.6.5"
